--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
 	"editor.formatOnSave": true,
-	"editor.defaultFormatter": "xaver.clang-format"
+	"[cpp]": {
+		"editor.defaultFormatter": "xaver.clang-format"
+	},
+	"editor.defaultFormatter": "esbenp.prettier-vscode"
 }
