Add new vectorUtils library
- Add .cpp and .h files for vectorFunctions
- Add makefile
- Modify .vscode task for easier compiling
- Functions added:
  - Function to makeVectorT with template
  - Function to makeMatrixT with template

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,6 +13,7 @@
 				"${file}",
 				"${workspaceFolder}/leetcode/cpp/bin/treeUtils.a",
 				"${workspaceFolder}/leetcode/cpp/bin/linkedListUtils.a",
+				"${workspaceFolder}/leetcode/cpp/bin/vectorUtils.a",
 				"-o",
 				"${fileDirname}/${fileBasenameNoExtension}.bin"
 			],
