[C] Modify vscode config files
- Add treeUtils to vscode compilation task
- Add debug config to vscode

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -36,6 +36,7 @@
 				"-pedantic-errors",
 				"-g",
 				"${file}",
+				"${workspaceFolder}/leetcode/c/bin/treeUtils.a",
 				"-o",
 				"${fileDirname}/${fileBasenameNoExtension}.bin"
 			],
