[C/C++] Add Address Sanitizer compile flag
- Add address sanitizer compile flag to both C and C++

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,6 +9,7 @@
 				"-Wextra",
 				"-Wall",
 				"-pedantic-errors",
+				"-fsanitize=address",
 				"-g",
 				"${file}",
 				"${workspaceFolder}/leetcode/cpp/bin/treeUtils.a",
@@ -35,6 +36,7 @@
 				"-Wall",
 				"-pedantic-errors",
 				"-g",
+				"-fsanitize=address",
 				"${file}",
 				"${workspaceFolder}/leetcode/c/bin/treeUtils.a",
 				"-o",
