[C] Create vector library
- Add library to vscode compilation task
- Add makefiles
- Define struct with constructor and destructor
- Add general functions in vectorFunctions

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -39,6 +39,7 @@
 				"-fsanitize=address",
 				"${file}",
 				"${workspaceFolder}/leetcode/c/bin/treeUtils.a",
+				"${workspaceFolder}/leetcode/c/bin/vectorUtils.a",
 				"-o",
 				"${fileDirname}/${fileBasenameNoExtension}.bin"
 			],
