[C] Fix errors in linkedListUtils
- Add library to vscode tasks
- Add libary to makefile of lib
- Add missing include to linkedListFunctions
- Fix typo in listNode

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -40,6 +40,7 @@
 				"${file}",
 				"${workspaceFolder}/leetcode/c/bin/treeUtils.a",
 				"${workspaceFolder}/leetcode/c/bin/vectorUtils.a",
+				"${workspaceFolder}/leetcode/c/bin/linkedListUtils.a",
 				"-o",
 				"${fileDirname}/${fileBasenameNoExtension}.bin"
 			],
